# Oxylus

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE.txt  README.md  file_reader.h  helper.cpp  image_allocator.h  main.cpp  mem_info.cpp  mem_info.h  output
cmake/: CompilerFlags.cmake  ExternalLibs.cmake  OxylusConfig.hpp.in
doc/: README.txt  oxylus.conf
include/oxylus/: OxylusConfig.hpp
include/oxylus/comm/: mpi_comm.h  mpi_memory_message.h
include/oxylus/communication/: communicator.h
include/oxylus/configuration/: Serialization.h  config.h  configuration_constants.h  configuration_defaults.h  configuration_object.h  configuration_parser.h
include/oxylus/image/: file_reader.h  image_operations.h  image_structure.h  point_structure.h
include/oxylus/memory/: file_reader.h  helper.h  image_allocator.h  mem_info.h
include/oxylus/misc/: custom_exception.h
include/oxylus/mpi_message/: image_allocation_message.h  memory_message.h
include/oxylus/training/: Cell.h  Matrix.h  NodeMatrix.h  cell.h  features.h  features_vector.h  leaf_node.h  matrix.h  matrix.tpp  node.h  node_vectors.h  predictor.h  thresholds_vector.h  trainer.h  training_vector.h  tree.h  untrained_node.h  vectors_generator.h  weak_learner_node.h
include/oxylus/utils/: typedefs.h
src/: CMakeLists.txt  main.cpp
src/comm/: mpi_comm.cpp
src/communication/: CMakeLists.txt  communicator.cpp
src/configuration/: CMakeLists.txt  configuration_object.cpp  configuration_parser.cpp
src/image/: CMakeLists.txt  file_reader.cpp  image_operations.cpp  image_structure.cpp  point_structure.cpp
src/memory/: CMakeLists.txt  file_reader.cpp  helper.cpp  image_allocator.cpp  mem_info.cpp
src/training/: CMakeLists.txt  cell.cpp  cell.tpp  leaf_node.cpp  node.cpp  predictor.cpp  trainer.cpp  tree.cpp  vectors_generator.cpp  weak_learner_node.cpp
templates/: header.h
test/: CMakeLists.txt  config.ini  testMain.cpp  testMatrix.cpp  testNodeMatrix.cpp
